fixed the unevenness with pfp border radius

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -151,7 +151,7 @@ margin-top:10px;
 
 .pfp {
   border-radius: 50%;
-  padding-right: 5px;
+  margin-right: 5px;
 }
 
 #userlist {
